--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-      "ConexMySql": "server=localhost;user=root;password=123456;database=clay_security"
+      "MySqlConex": "server=localhost;user=root;password=123456;database=clay_security2"
   }
 }
