feat: :sparkles: Create pagination
add pagination

@duvanrg

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
       "MySqlConex": "server=localhost;user=root;password=123456;database=clay_security2"
+  },
+  "JWT" : {
+    "Key": "TengoHambre",
+    "Isser": "ApiIncidencias",
+    "Audience": "ApiIncidencias",
+    "DurationMinutes":20
   }
 }
