--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,11 @@
   },
   "ConnectionStrings": {
       "MySqlConex": "server=localhost;user=root;password=123456;database=clay_security2"
+    },
+  "JWT" : {
+    "Key": "TengoHambre",
+    "Isser": "ApiIncidencias",
+    "Audience": "ApiIncidencias",
+    "DurationMinutes":20
   }
 }
